--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.21.0
   go_router: ^12.0.1
   country_flags: ^2.1.1
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
